--- a/app/src/main/res/xml/splatoon_widget_info.xml
+++ b/app/src/main/res/xml/splatoon_widget_info.xml
@@ -3,14 +3,14 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/splatoon_widget"
     android:initialLayout="@layout/glance_default_loading_layout"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:minWidth="120dp"
+    android:minHeight="120dp"
+    android:previewImage="@drawable/turfwar"
     android:previewLayout="@layout/splatoon_widget"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="1"
     android:targetCellHeight="1"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen" >
 
 </appwidget-provider>
