--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Splatoon3_Companion" parent="android:Theme.NoTitleBar" >
+    <style name="Theme.Splatoon3_Companion" parent="android:Theme.Material.Light.NoActionBar" >
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
